Fixed stretched-out image

--- a/app/assets/stylesheets/display.css.scss
+++ b/app/assets/stylesheets/display.css.scss
@@ -2065,7 +2065,8 @@ FEEDGRID
 												.feedgrid figure img {
 													display: block;
 													width: auto;
-													height: 100%;
+													height: auto;
+													max-height: 100%;
 													max-width: 100%;
 													margin: 0 auto;
 												}
